admin login pape added

--- a/WebApplication15/Views/Login/Add.cshtml
+++ b/WebApplication15/Views/Login/Add.cshtml
@@ -19,6 +19,10 @@
     <input asp-for="UserName" type="text" placeholder="Username" required>
     <i class='bx bxs-user'></i>
   </div>
+   <div class="input-box">
+    <input asp-for="UserSurname" type="text" placeholder="UserSurname" required>
+    <i class='bx bxs-user'></i>
+  </div>
   <div class="input-box">
     <input asp-for="PassWord" type="password" placeholder="Password" required>
     <i class='bx bxs-lock-alt' ></i>
