--- a/WebApplication15/Views/Ucak/SeferDuzenle.cshtml
+++ b/WebApplication15/Views/Ucak/SeferDuzenle.cshtml
@@ -3,7 +3,7 @@
 
     Layout = "~/Views/Shared/_adminLayout.cshtml";
     ViewData["Title"] = "asdasd";
-    ViewData["panel"] = "Ucak ekleme";
+    ViewData["panel"] = "Sefer Duzenleme";
 }
 <section class="contact section-padding">
     <div class="container">
@@ -21,7 +21,6 @@
                                     <th scope="col">Uçak Adı</th>
                                     <th scope="col">Tarih</th>
                                     <th scope="col">Güncelle</th>
-                                    <th scope="col">Sil</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -35,10 +34,10 @@
                                                            <td> @SeferEkleViewModel.FromDate</td>
                                                        
                                                               <td>
-                                                                                   <a   href="SeferGuncelle/@SeferEkleViewModel.VoyageId">View</a>
+                                                               <a   href="SeferGuncelle/@SeferEkleViewModel.VoyageId">View</a>
                                                                   
                                                                 </td>
-                                                   <td><a href="" class="btn btn-danger">Sil</a></td>
+                                                  
 
                                                    </tr>
                                     }
