--- a/WebApplication15/Views/Login/Add.cshtml
+++ b/WebApplication15/Views/Login/Add.cshtml
@@ -1,22 +1,21 @@
 ﻿@model WebApplication15.Models.AddUserViewModel
 @{
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form | Dan Aleko</title>
-  <link rel="stylesheet" href="~/css/Login.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+
 <body>
   <div class="wrapper">
   <form asp-action="Add" asp-controller="Login" method="post">
   <h1>Register</h1>
   <div class="input-box">
     <input asp-for="UserName" type="text" placeholder="Username" required>
+    <i class='bx bxs-user'></i>
+  </div>
+   <div class="input-box">
+    <input asp-for="Name" type="text" placeholder="name" required>
     <i class='bx bxs-user'></i>
   </div>
    <div class="input-box">
