--- a/WebApplication15/Views/Login/AdminPage.cshtml
+++ b/WebApplication15/Views/Login/AdminPage.cshtml
@@ -1,22 +1,17 @@
-﻿@model WebApplication15.Models.AdminPageViewModel
+﻿@model WebApplication15.Models.LoginPageViewModel
 @{
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form | Dan Aleko</title>
-  <link rel="stylesheet" href="~/css/Login.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+
 <body>
   <div class="wrapper">
   <form asp-action="AdminPage" asp-controller="Login" method="post">
   <h1>Admin Sign In</h1>
   <div class="input-box">
-    <input asp-for="Email" type="text" placeholder="E-mail" required>
+    <input asp-for="UserName" type="text" placeholder="E-mail" required>
     <i class='bx bxs-user'></i>
   </div>
   <div class="input-box">
@@ -28,6 +23,9 @@
                   <p class="error">@ViewData["Error2"]</p>
             }
   <button type="submit" class="btn">Login</button>
+  <div class="register-link">
+        <p><a asp-controller="Login" asp-action="LoginPage"> back to Login page</a></p>
+   </div>
 </form>
 
   </div>
